fix: mejorar la presentación del perfil de Ezequiel Casiano y agregar prerender en la página de fundadores

--- a/src/content/founder/en/ezequiel_casiano.mdx
+++ b/src/content/founder/en/ezequiel_casiano.mdx
@@ -8,7 +8,13 @@ import RandomQuotes from "../../../components/RandomQuotes.astro";
 
 ## About Me
 
-Hi! I'm Casiano Ezequiel, As a leader, I turn ideas into high‑impact products: I define the vision and roadmap, prioritize by value, and coordinate cross‑functional teams to deliver scalable, measurable solutions. I lead strategy and technical execution — from prototypes and MVPs to production architectures — backed by experience in frontend, backend, infrastructure, and CI/CD (React, Astro, Node/Express, Python/Flask, AWS/GCP, Docker). I make decisions based on metrics and the voice of the user to reduce risk, accelerate time‑to‑market, and maximize adoption.
+Hi! I'm **Casiano Ezequiel**.
+
+As a leader, I turn ideas into high‑impact products: I define the **vision and roadmap**, prioritize by value, and coordinate cross‑functional teams to deliver scalable, measurable solutions.
+
+I lead strategy and technical execution — from prototypes and MVPs to production architectures — backed by experience in **frontend, backend, infrastructure, and CI/CD** (React, Astro, Node/Express, Python/Flask, AWS/GCP, Docker).
+
+I make decisions based on **metrics and the voice of the user** to reduce risk, accelerate time‑to‑market, and maximize adoption.
 
 **Favorite Quote**  
 <RandomQuotes 
