--- a/src/content/founder/es/ezequiel_casiano.mdx
+++ b/src/content/founder/es/ezequiel_casiano.mdx
@@ -8,7 +8,13 @@ import RandomQuotes from "../../../components/RandomQuotes.astro";
 
 ## Sobre mí
 
-¡Hola! Soy Casiano Ezequiel, Como líder, convierto ideas en productos de alto impacto: defino la visión y el roadmap, priorizo por valor y coordino equipos cross‑funcionales para entregar soluciones escalables y medibles. Lidero la estrategia y la ejecución técnica —desde prototipos y MVPs hasta arquitecturas en producción— apoyado en experiencia en frontend, backend, infraestructura y CI/CD (React, Astro, Node/Express, Python/Flask, AWS/GCP, Docker). Tomo decisiones basadas en métricas y en la voz del usuario para reducir riesgos, acelerar el time‑to‑market y maximizar adopción.
+¡Hola! Soy **Casiano Ezequiel**.
+
+Como líder, convierto ideas en productos de alto impacto: defino la **visión y el roadmap**, priorizo por valor y coordino equipos cross‑funcionales para entregar soluciones escalables y medibles.
+
+Lidero la estrategia y la ejecución técnica —desde prototipos y MVPs hasta arquitecturas en producción— apoyado en experiencia en **frontend, backend, infraestructura y CI/CD** (React, Astro, Node/Express, Python/Flask, AWS/GCP, Docker).
+
+Tomo decisiones basadas en **métricas y en la voz del usuario** para reducir riesgos, acelerar el time‑to‑market y maximizar adopción.
 
 **Frase favorita**  
 <RandomQuotes 
